bottom-to-top button alignment fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2877,7 +2877,7 @@ footer {
 
   #back-to-top-container {
     position: fixed;
-    top: 82%;
+    top: 84.1%;
     right: 8%;
     /* Changed left to right */
   }
